platiagro/web-ui/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-ui
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: $(platiagro-web-ui-service).$(platiagro-web-ui-namespace).svc.cluster.local
        port:
          number: 80
    timeout: 300s
